--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "bih-web-ui-4",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://stupidbasket.com/",
   "dependencies": {
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
@@ -10,10 +11,13 @@
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
+    "chart.js": "^4.4.4",
     "postcss": "^8.4.47",
     "qrcode.react": "^4.0.1",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
+    "react-helmet": "^6.1.0",
     "react-icons": "^5.3.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.2",
