--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-snap": "^1.23.0",
     "react-transition-group": "^4.4.5",
     "slick-carousel": "^1.8.1",
+    "swiper": "^11.1.15",
     "tailwindcss": "^3.4.11",
     "web-vitals": "^2.1.4"
   },
