--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.7.7",
     "chart.js": "^4.4.4",
     "next": "^14.2.13",
+    "next-seo": "^6.6.0",
     "postcss": "^8.4.47",
     "qrcode.react": "^4.0.1",
     "razzle": "^4.2.18",
