--- a/.htaccess
+++ b/.htaccess
@@ -28,5 +28,5 @@ RewriteRule ^(.*)\.var$ $1.html [R=301,L]
 
 # Redirect non-www to www
 RewriteEngine On
-RewriteCond %{HTTP_HOST} ^([^www\.]+)\.(.+)$ [NC]
-RewriteRule ^ http://www.%1.%2%{REQUEST_URI} [L,R=301]
+RewriteCond %{HTTP_HOST} !^www\. [NC]
+RewriteRule ^(.*)$ http://www.%{HTTP_HOST}/$1 [R=301,L]
