--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,16 @@
 # Enable the Rewrite Engine
 RewriteEngine On
 
+# Force HTTPS and remove "www"
+RewriteCond %{HTTPS} !=on [OR]
+RewriteCond %{HTTP_HOST} ^www\.(.+)$ [NC]
+RewriteRule ^ https://%1%{REQUEST_URI} [L,R=301]
+
+# Redirect any trailing slashes to non-slash version (optional)
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_URI} .*/$
+RewriteRule ^(.*)/$ https://%{HTTP_HOST}/$1 [L,R=301]
+
 # Exclude paths that should not be rewritten to /AppTemplate/
 RewriteCond %{REQUEST_URI} !^/blogs/.*
 
@@ -26,7 +36,4 @@ Options -MultiViews
 # Rewrite .var files to .html
 RewriteRule ^(.*)\.var$ $1.html [R=301,L]
 
-# Redirect non-www to www
-RewriteEngine On
-RewriteCond %{HTTP_HOST} !^www\. [NC]
-RewriteRule ^(.*)$ http://www.%{HTTP_HOST}/$1 [R=301,L]
+
