--- a/.htaccess
+++ b/.htaccess
@@ -9,6 +9,7 @@ RewriteRule ^(.*)$ https://%1/$1 [L,R=301]
 
 # Exclude paths that should not be rewritten to /AppTemplate/
 RewriteCond %{REQUEST_URI} !^/blogs/.*
+RewriteCond %{REQUEST_URI} !^/properties/.*
 
 # Internally rewrite root requests to /AppTemplate/
 RewriteRule ^$ /AppTemplate/ [L]
